Pass context classloader to Class.forName calls